refactor: Simplify validation methods and improve code readability in character definition classes